# 7574-museum

./: .gitignore  CMakeLists.txt  README.md  administrador.cpp  build.sh  constants.h  door.cpp  guide.cpp  guide_timeout.cpp  main.cpp  mensaje.h  message.h  person.cpp  person_dispatcher.cpp  persona.cpp  puerta.cpp
include/: logger.h  msg.h  resources.h  semaphore.h  shm.h
